--- a/GUI/Main.ui
+++ b/GUI/Main.ui
@@ -24,7 +24,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>Image</string>
+     <string/>
     </property>
    </widget>
    <widget class="QTabWidget" name="tabWidget">
@@ -65,7 +65,7 @@
         <x>20</x>
         <y>20</y>
         <width>241</width>
-        <height>121</height>
+        <height>71</height>
        </rect>
       </property>
       <widget class="QPushButton" name="video_mode_button">
@@ -90,6 +90,12 @@
          <height>35</height>
         </size>
        </property>
+       <property name="default">
+        <bool>true</bool>
+       </property>
+       <property name="flat">
+        <bool>false</bool>
+       </property>
       </widget>
       <widget class="QPushButton" name="keypoint_toggle_button">
        <property name="geometry">
@@ -99,6 +105,14 @@
          <width>61</width>
          <height>61</height>
         </rect>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>13</pointsize>
+         <weight>75</weight>
+         <bold>true</bold>
+         <stylestrategy>PreferDefault</stylestrategy>
+        </font>
        </property>
        <property name="text">
         <string/>
@@ -112,6 +126,12 @@
          <width>35</width>
          <height>35</height>
         </size>
+       </property>
+       <property name="default">
+        <bool>true</bool>
+       </property>
+       <property name="flat">
+        <bool>false</bool>
        </property>
       </widget>
       <widget class="QPushButton" name="camera_mode_button">
@@ -136,6 +156,18 @@
          <height>35</height>
         </size>
        </property>
+       <property name="checkable">
+        <bool>false</bool>
+       </property>
+       <property name="autoDefault">
+        <bool>false</bool>
+       </property>
+       <property name="default">
+        <bool>true</bool>
+       </property>
+       <property name="flat">
+        <bool>false</bool>
+       </property>
       </widget>
       <widget class="QPushButton" name="pushButton_8">
        <property name="geometry">
@@ -149,6 +181,18 @@
        <property name="text">
         <string>PushButton</string>
        </property>
+       <property name="checkable">
+        <bool>false</bool>
+       </property>
+       <property name="checked">
+        <bool>false</bool>
+       </property>
+       <property name="default">
+        <bool>true</bool>
+       </property>
+       <property name="flat">
+        <bool>false</bool>
+       </property>
       </widget>
      </widget>
      <widget class="QWidget" name="output_widgets" native="true">
@@ -160,30 +204,48 @@
         <height>581</height>
        </rect>
       </property>
-      <widget class="QLabel" name="error_label">
+      <widget class="QLabel" name="status_label">
        <property name="geometry">
         <rect>
-         <x>0</x>
+         <x>10</x>
          <y>300</y>
-         <width>271</width>
+         <width>261</width>
          <height>51</height>
         </rect>
        </property>
+       <property name="font">
+        <font>
+         <family>.AppleSystemUIFont</family>
+         <pointsize>18</pointsize>
+         <weight>75</weight>
+         <bold>true</bold>
+        </font>
+       </property>
        <property name="text">
-        <string>ErrorLabel</string>
+        <string/>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignCenter</set>
        </property>
       </widget>
       <widget class="QLabel" name="result_label">
        <property name="geometry">
         <rect>
-         <x>0</x>
+         <x>10</x>
          <y>10</y>
-         <width>271</width>
+         <width>261</width>
          <height>281</height>
         </rect>
        </property>
+       <property name="font">
+        <font>
+         <pointsize>13</pointsize>
+         <weight>50</weight>
+         <bold>false</bold>
+        </font>
+       </property>
        <property name="text">
-        <string>Result Label</string>
+        <string/>
        </property>
       </widget>
      </widget>
@@ -192,23 +254,139 @@
      <attribute name="title">
       <string>SYSTEM</string>
      </attribute>
-     <widget class="QWidget" name="">
+     <widget class="QLabel" name="label">
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>60</y>
-        <width>261</width>
-        <height>41</height>
+        <y>10</y>
+        <width>201</width>
+        <height>31</height>
        </rect>
       </property>
-      <layout class="QHBoxLayout" name="horizontalLayout_17" stretch="2,9,0,1">
-       <property name="spacing">
-        <number>6</number>
+      <property name="font">
+       <font>
+        <pointsize>20</pointsize>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="text">
+       <string>Performance</string>
+      </property>
+     </widget>
+     <widget class="QWidget" name="gridLayoutWidget">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>50</y>
+        <width>276</width>
+        <height>148</height>
+       </rect>
+      </property>
+      <layout class="QGridLayout" name="gridLayout">
+       <property name="leftMargin">
+        <number>5</number>
+       </property>
+       <property name="topMargin">
+        <number>5</number>
+       </property>
+       <property name="rightMargin">
+        <number>5</number>
        </property>
        <property name="bottomMargin">
-        <number>0</number>
+        <number>5</number>
        </property>
-       <item>
+       <property name="verticalSpacing">
+        <number>-1</number>
+       </property>
+       <item row="2" column="1">
+        <widget class="QLabel" name="label_26">
+         <property name="maximumSize">
+          <size>
+           <width>16777215</width>
+           <height>25</height>
+          </size>
+         </property>
+         <property name="text">
+          <string>RAM</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignJustify|Qt::AlignVCenter</set>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="3">
+        <widget class="QLabel" name="ram">
+         <property name="maximumSize">
+          <size>
+           <width>16777215</width>
+           <height>25</height>
+          </size>
+         </property>
+         <property name="text">
+          <string>3.5/4</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+         </property>
+        </widget>
+       </item>
+       <item row="4" column="3">
+        <widget class="QLabel" name="disk">
+         <property name="maximumSize">
+          <size>
+           <width>700</width>
+           <height>25</height>
+          </size>
+         </property>
+         <property name="text">
+          <string>45/64</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+         </property>
+        </widget>
+       </item>
+       <item row="4" column="4">
+        <widget class="QLabel" name="label_29">
+         <property name="text">
+          <string>GB</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+         </property>
+        </widget>
+       </item>
+       <item row="5" column="1" colspan="4">
+        <widget class="QProgressBar" name="progressBar_DISK">
+         <property name="maximumSize">
+          <size>
+           <width>16777215</width>
+           <height>12</height>
+          </size>
+         </property>
+         <property name="font">
+          <font>
+           <family>Segoe UI</family>
+           <pointsize>8</pointsize>
+           <weight>75</weight>
+           <bold>true</bold>
+           <kerning>true</kerning>
+          </font>
+         </property>
+         <property name="value">
+          <number>85</number>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="4">
+        <widget class="QLabel" name="label_27">
+         <property name="text">
+          <string>GB</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="1">
         <widget class="QLabel" name="label_19">
          <property name="maximumSize">
           <size>
@@ -220,11 +398,11 @@
           <string>CPU</string>
          </property>
          <property name="alignment">
-          <set>Qt::AlignCenter</set>
+          <set>Qt::AlignJustify|Qt::AlignVCenter</set>
          </property>
         </widget>
        </item>
-       <item>
+       <item row="1" column="1" colspan="4">
         <widget class="QProgressBar" name="progressBar_CPU">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
@@ -251,39 +429,7 @@
          </property>
         </widget>
        </item>
-       <item>
-        <widget class="QLabel" name="cpu">
-         <property name="maximumSize">
-          <size>
-           <width>16777215</width>
-           <height>25</height>
-          </size>
-         </property>
-         <property name="text">
-          <string>80</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QLabel" name="label_25">
-         <property name="text">
-          <string>%</string>
-         </property>
-        </widget>
-       </item>
-      </layout>
-     </widget>
-     <widget class="QWidget" name="">
-      <property name="geometry">
-       <rect>
-        <x>10</x>
-        <y>160</y>
-        <width>261</width>
-        <height>41</height>
-       </rect>
-      </property>
-      <layout class="QHBoxLayout" name="horizontalLayout_21" stretch="2,9,0,1">
-       <item>
+       <item row="4" column="1">
         <widget class="QLabel" name="label_28">
          <property name="maximumSize">
           <size>
@@ -295,66 +441,19 @@
           <string>DISK</string>
          </property>
          <property name="alignment">
-          <set>Qt::AlignCenter</set>
+          <set>Qt::AlignJustify|Qt::AlignVCenter</set>
          </property>
         </widget>
        </item>
-       <item>
-        <widget class="QProgressBar" name="progressBar_DISK">
-         <property name="maximumSize">
-          <size>
-           <width>16777215</width>
-           <height>12</height>
-          </size>
-         </property>
-         <property name="font">
-          <font>
-           <family>Segoe UI</family>
-           <pointsize>8</pointsize>
-           <weight>75</weight>
-           <bold>true</bold>
-           <kerning>true</kerning>
-          </font>
-         </property>
-         <property name="value">
-          <number>85</number>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QLabel" name="disk">
-         <property name="maximumSize">
-          <size>
-           <width>700</width>
-           <height>25</height>
-          </size>
-         </property>
+       <item row="0" column="4">
+        <widget class="QLabel" name="label_25">
          <property name="text">
-          <string>45/64</string>
+          <string>%</string>
          </property>
         </widget>
        </item>
-       <item>
-        <widget class="QLabel" name="label_29">
-         <property name="text">
-          <string>GB</string>
-         </property>
-        </widget>
-       </item>
-      </layout>
-     </widget>
-     <widget class="QWidget" name="">
-      <property name="geometry">
-       <rect>
-        <x>10</x>
-        <y>110</y>
-        <width>261</width>
-        <height>41</height>
-       </rect>
-      </property>
-      <layout class="QHBoxLayout" name="horizontalLayout_18" stretch="2,9,2,1">
-       <item>
-        <widget class="QLabel" name="label_26">
+       <item row="0" column="3">
+        <widget class="QLabel" name="cpu">
          <property name="maximumSize">
           <size>
            <width>16777215</width>
@@ -362,14 +461,14 @@
           </size>
          </property>
          <property name="text">
-          <string>RAM</string>
+          <string>80</string>
          </property>
          <property name="alignment">
-          <set>Qt::AlignCenter</set>
+          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
          </property>
         </widget>
        </item>
-       <item>
+       <item row="3" column="1" colspan="4">
         <widget class="QProgressBar" name="progressBar_RAM">
          <property name="maximumSize">
           <size>
@@ -390,47 +489,14 @@
          </property>
         </widget>
        </item>
-       <item>
-        <widget class="QLabel" name="ram">
-         <property name="maximumSize">
-          <size>
-           <width>16777215</width>
-           <height>25</height>
-          </size>
-         </property>
+       <item row="4" column="2">
+        <widget class="QLabel" name="label_2">
          <property name="text">
-          <string>3.5/4</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QLabel" name="label_27">
-         <property name="text">
-          <string>GB</string>
+          <string>                                 </string>
          </property>
         </widget>
        </item>
       </layout>
-     </widget>
-     <widget class="QLabel" name="label">
-      <property name="geometry">
-       <rect>
-        <x>10</x>
-        <y>10</y>
-        <width>201</width>
-        <height>31</height>
-       </rect>
-      </property>
-      <property name="font">
-       <font>
-        <pointsize>20</pointsize>
-        <weight>75</weight>
-        <bold>true</bold>
-       </font>
-      </property>
-      <property name="text">
-       <string>Performance</string>
-      </property>
      </widget>
     </widget>
    </widget>
