--- a/GUI/Main.ui
+++ b/GUI/Main.ui
@@ -62,16 +62,16 @@
      <widget class="QWidget" name="control_buttons" native="true">
       <property name="geometry">
        <rect>
-        <x>20</x>
+        <x>0</x>
         <y>20</y>
-        <width>241</width>
-        <height>71</height>
+        <width>271</width>
+        <height>151</height>
        </rect>
       </property>
       <widget class="QPushButton" name="video_mode_button">
        <property name="geometry">
         <rect>
-         <x>60</x>
+         <x>110</x>
          <y>0</y>
          <width>61</width>
          <height>61</height>
@@ -100,7 +100,7 @@
       <widget class="QPushButton" name="keypoint_toggle_button">
        <property name="geometry">
         <rect>
-         <x>120</x>
+         <x>190</x>
          <y>0</y>
          <width>61</width>
          <height>61</height>
@@ -137,7 +137,7 @@
       <widget class="QPushButton" name="camera_mode_button">
        <property name="geometry">
         <rect>
-         <x>0</x>
+         <x>30</x>
          <y>0</y>
          <width>61</width>
          <height>61</height>
@@ -169,17 +169,97 @@
         <bool>false</bool>
        </property>
       </widget>
-      <widget class="QPushButton" name="pushButton_8">
+      <widget class="QPushButton" name="flip_horizontal_button">
        <property name="geometry">
         <rect>
-         <x>180</x>
-         <y>0</y>
+         <x>30</x>
+         <y>70</y>
          <width>61</width>
          <height>61</height>
         </rect>
        </property>
        <property name="text">
-        <string>PushButton</string>
+        <string/>
+       </property>
+       <property name="icon">
+        <iconset>
+         <normaloff>icons/flip-horizontal-svgrepo-com-2.svg</normaloff>icons/flip-horizontal-svgrepo-com-2.svg</iconset>
+       </property>
+       <property name="iconSize">
+        <size>
+         <width>35</width>
+         <height>35</height>
+        </size>
+       </property>
+       <property name="checkable">
+        <bool>false</bool>
+       </property>
+       <property name="checked">
+        <bool>false</bool>
+       </property>
+       <property name="default">
+        <bool>true</bool>
+       </property>
+       <property name="flat">
+        <bool>false</bool>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="set_save_folder_button">
+       <property name="geometry">
+        <rect>
+         <x>110</x>
+         <y>70</y>
+         <width>61</width>
+         <height>61</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+       <property name="icon">
+        <iconset>
+         <normaloff>icons/download-svgrepo-com.svg</normaloff>icons/download-svgrepo-com.svg</iconset>
+       </property>
+       <property name="iconSize">
+        <size>
+         <width>35</width>
+         <height>35</height>
+        </size>
+       </property>
+       <property name="checkable">
+        <bool>false</bool>
+       </property>
+       <property name="checked">
+        <bool>false</bool>
+       </property>
+       <property name="default">
+        <bool>true</bool>
+       </property>
+       <property name="flat">
+        <bool>false</bool>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="toggle_recording_button">
+       <property name="geometry">
+        <rect>
+         <x>190</x>
+         <y>70</y>
+         <width>61</width>
+         <height>61</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+       <property name="icon">
+        <iconset>
+         <normaloff>icons/fall-down-the-stairs-falling-down-svgrepo-com.svg</normaloff>icons/fall-down-the-stairs-falling-down-svgrepo-com.svg</iconset>
+       </property>
+       <property name="iconSize">
+        <size>
+         <width>35</width>
+         <height>35</height>
+        </size>
        </property>
        <property name="checkable">
         <bool>false</bool>
@@ -199,17 +279,17 @@
       <property name="geometry">
        <rect>
         <x>0</x>
-        <y>140</y>
+        <y>170</y>
         <width>281</width>
-        <height>581</height>
+        <height>621</height>
        </rect>
       </property>
       <widget class="QLabel" name="status_label">
        <property name="geometry">
         <rect>
          <x>10</x>
-         <y>300</y>
-         <width>261</width>
+         <y>70</y>
+         <width>251</width>
          <height>51</height>
         </rect>
        </property>
@@ -232,9 +312,9 @@
        <property name="geometry">
         <rect>
          <x>10</x>
-         <y>10</y>
-         <width>261</width>
-         <height>281</height>
+         <y>140</y>
+         <width>251</width>
+         <height>211</height>
         </rect>
        </property>
        <property name="font">
@@ -242,6 +322,26 @@
          <pointsize>13</pointsize>
          <weight>50</weight>
          <bold>false</bold>
+        </font>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+      <widget class="QLabel" name="record_display">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>0</y>
+         <width>251</width>
+         <height>51</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>18</pointsize>
+         <weight>75</weight>
+         <bold>true</bold>
         </font>
        </property>
        <property name="text">
